# Aegis

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  convert_to_jsx.py  docker-compose.yml  modal_deploy.py  pyproject.toml  requirements.txt  split_html.py  test_extract.py  test_load.py
core_packages/: README.md  __init__.py  calibrate.py  cli.py  config.py  model_wrapper.py  modules.py  server.py  vector_engine.py  vllm_adapter.py
core_packages/static/: index.html
docs/: App_Flow.md  Design_Document.md  PRD.md  README.md  Understanding_Aegis  api_reference.md  compliance.md  user_guide.md
orchestration_validation/: README.md  run_pipeline.py  sandbox_inference.py  test_aegis.py
web_interface/: vercel.json  vite.config.js
web_interface/src/: App.jsx  index.css  legacy_body.html  legacy_script.js
