[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-firewall"
version = "1.0.0"
description = "Cognitive & Emotional Firewall for LLMs – real-time activation steering and deception detection."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Project Aegis Team" },
]
keywords = [
    "llm", "ai-safety", "firewall", "activation-steering",
    "representation-engineering", "alignment", "transformers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",       # for TestClient
    "nltk>=3.8.0",         # for BLEU score in regression tests
    "rouge-score>=0.1.2",  # for ROUGE in regression tests
]
security = [
    "slowapi>=0.1.9",      # rate limiting
    "cryptography>=42.0",  # TLS utilities
]
vllm = [
    "vllm>=0.4.0",
]
all = [
    "aegis-firewall[dev,security]",
]

[project.scripts]
aegis = "core_packages.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/aegis-firewall"
Documentation = "https://github.com/your-org/aegis-firewall/tree/main/docs"
"Bug Tracker" = "https://github.com/your-org/aegis-firewall/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core_packages*"]

[tool.setuptools.package-data]
"core_packages" = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
